--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "chart.js": "^4.2.1",
     "react-chartjs-2": "^5.2.0",
     "tailwindcss": "^3.4.7"
+    "@vitejs/plugin-react": "^4.0.0"
   },
   "devDependencies": {
     "vite": "^4.3.9",
     "serve": "^14.0.1"
   }
 }
+
