--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "prism-grc-monorepo",
   "version": "1.0.0",
   "scripts": {
-    "install-backend": "pip install -r backend/requirements.txt",
+    "install-backend": "python3 -m pip install -r backend/requirements.txt",
     "install-frontend": "cd frontend && npm install",
     "install-all": "npm run install-backend && npm run install-frontend",
     "build-frontend": "cd frontend && npm run build",
     "build-all": "npm run build-frontend"
-  },
-  "dependencies": {},
-  "devDependencies": {}
+  }
 }
